--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+<br>
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
   <span>หัวกระดาษปะมาณการค่าใช้จ่ายในการเดินทางไปราชการ</span>
 </div>
