--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
@@ -190,7 +190,7 @@
                                   1
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/cop06/1"> กระดาษทำการรับวัตถุดิบ </a>
+                                  <a href="javascript:;" routerLink="/cop06/1">รายงานการตรวจปฏิบัติการรับวัตถุดิบ </a>
                               </td>
                           </tr>
                           <tr>
@@ -198,7 +198,7 @@
                                   2
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/cop06/1/1"> กระดาษทำการจ่ายวัตถุดิบ </a>
+                                  <a href="javascript:;" routerLink="/cop06/1/1"> รายงานการตรวจปฏิบัติการการจ่ายวัตถุดิบ </a>
                               </td>
                           </tr>
                           <tr>
@@ -206,7 +206,7 @@
                                   3
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/cop06/1/2"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
+                                  <a href="javascript:;" routerLink="/cop06/1/2">รายงานการตรวจปฏิบัติการตรวจนับวัตถุดิบคงเหลือ </a>
                               </td>
                           </tr>
                       </tbody>
@@ -225,7 +225,7 @@
                                   1
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/cop06/3"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                  <a href="javascript:;" routerLink="/cop06/3"> รายงานการตรวจปฏิบัติการรับสินค้าสำเร็จรูป </a>
                               </td>
                           </tr>
                           <tr>
@@ -233,7 +233,7 @@
                                   2
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/cop06/3/1"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                  <a href="javascript:;" routerLink="/cop06/3/1"> รายงานการตรวจปฏิบัติการจ่ายสินค้าสำเร็จรูป </a>
                               </td>
                           </tr>
                       </tbody>
@@ -252,7 +252,7 @@
                                   1
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/cop06/4"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
+                                  <a href="javascript:;" routerLink="/cop06/4">รายงานการตรวจปฏิบัติการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
                               </td>
                           </tr>
                          
