--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="thirteen wide column" style="padding-top: 0">
-                    <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
+                    <div>
                         <table id="userManagementDt" class="ui small celled table aligned hover striped selectable nowrap" style="width: 100%">
                             <thead id="trDrinamic">
                                 <tr>
