--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.css
@@ -9,3 +9,22 @@
 .active {
     color: black !important;
 }
+.wrapper:hover #slide {
+    transition: 1s;
+    left: 0;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.transition-left {
+    position: fixed;
+    left: -270px;
+}
+.custom-menu{
+    border-top-left-radius: 0rem;
+    border-top-right-radius: 0.285714rem;
+    border-bottom-right-radius: 0.285714rem;
+    border-bottom-left-radius: 0rem;
+}
