edit data table int11-1

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -10,6 +10,7 @@
 
     <div id="followUpProjectPage" class="ui attached segment">
       <div id="followUpProjectForm" class="ui form">
+        <input type="hidden" id="searchFlag" name="searchFlag">
         <div class="inline fields">
           <div class="two wide field "></div>
 
@@ -54,14 +55,20 @@
           </div>
         </div>
       </div>
+    </div>
+    <br/>
 
-      <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 150%;">
+
+  </div>
+</div>
+
+<div class="ui segment {{loading ? 'loading' : ''}}">
+    <table id="dataTable" class="ui small celled table nowrap striped selectable " style="width: 100%">
         <thead>
           <tr>
             <th rowspan="2" style="text-align: center !important;">
               <div class="ui checkbox check-all">
                 <input type="checkbox" (click)="clickCheckAll($event)">
-                <label></label>
               </div>
             </th>
             <th rowspan="2" style="text-align: center !important;">โครงการ</th>
@@ -123,14 +130,7 @@
           </button>
         </div>
       </div>
-
-    </div>
-    <br/>
-
-
   </div>
-</div>
-
 <!-- modol close -->
 <div class="ui modal" id="modolClose">
     <div class="header">
