mockup หน้าจอพี่ต้อ

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.css
@@ -19,8 +19,9 @@
 }
 
 .transition-left {
-    position: fixed;
-    left: -270px;
+    /* position: fixed;
+    left: -270px; */
+    display: none
 }
 .custom-menu{
     border-top-left-radius: 0rem;
